--- a/GameReviewApp/appsettings.json
+++ b/GameReviewApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyConnectionString": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
