Using repository pattern and Dep. Injection

--- a/GameReviewApp/appsettings.json
+++ b/GameReviewApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnectionString": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+    "MyConnectionString": "Server=localhost, 1433;Database=DataBaseName;User Id=UserName;Password=YourPwd;"
   },
   "Logging": {
     "LogLevel": {
