GET & Read Methods - Pt1

--- a/GameReviewApp/appsettings.json
+++ b/GameReviewApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnectionString": "Server=localhost, 1433;Database=DataBaseName;User Id=UserName;Password=YourPwd;"
+    "MyConnectionString": "Server=localhost, 1433;Database=GamesReview;User Id=sa;Password=Melon@123;"
   },
   "Logging": {
     "LogLevel": {
