POST & Create Methods Pt2

--- a/GameReviewApp/appsettings.json
+++ b/GameReviewApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnectionString": "Server=myServerAddress;Database=GamesReview;User Id=myUsername;Password=myPassword;"
+    "MyConnectionString": "Server=localhost, 1433;Database=GamesReview;User Id=sa;Password=Melon@123;"
   },
   "Logging": {
     "LogLevel": {
